--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello</h1>
+<main>
+	<img src="./imgs/img_basecamp.jpeg">
+	<h2>myPhotoApp</h2>
+	<p>
+		Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
+		attack your ankles chase the red dot, hairball run catnip eat the grass
+		sniff.
+	</p>
+</main>
