--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <main>
-	<img src="./imgs/img_basecamp.jpeg">
+
+	<p>Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
+
+	<a href="#"><img src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+
 	<h2>myPhotoApp</h2>
+
 	<p>
 		Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
 		attack your ankles chase the red dot, hairball run catnip eat the grass
 		sniff.
 	</p>
+
+	<ul>
+		<li>milk</li>
+		<li>cheese</li>
+		<li>mause</li>
+	</ul>
+	<form action="https://github.com/lamorim42/">
+		<input type="text" placeholder="isso vai direto para o github" required>
+		<button type="submit">this button submits the form</button>
+	</form>
+	<label for="indoor-outdoor">
+		<input id="indoor" type="radio" name="indoor-outdoor">Indoor</input>
+		<input id="outdoor" type="radio" name="indoor-outdoor">outdoor</input>
+	</label>
 </main>
+<footer>Luís Amorim</footer>
