--- a/index.html
+++ b/index.html
@@ -1,29 +1,49 @@
-<main>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>server</title>
+	<link rel="shortcut icon" href="#">
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+	<main>
+		<div>
+			<p class="cat">Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
+			<a href="#"><img src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+			<h2>myPhotoApp</h2>
+			<p>
+				Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
+				attack your ankles chase the red dot, hairball run catnip eat the grass
+				sniff.
+			</p>
+			<ul>
+				<li>milk</li>
+				<li>cheese</li>
+				<li>mause</li>
+			</ul>
+		</div>
 
-	<p>Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
+		<form action="https://github.com/lamorim42/">
+			<input type="text" placeholder="isso vai direto para o github" required>
+			<button type="submit">this button submits the form</button>
+		</form>
+		<label for="indoor-outdoor">
+			<input id="indoor" value="indoor" type="radio" name="indoor-outdoor">Indoor</input>
+			<input id="outdoor" value="outdoor" type="radio" name="indoor-outdoor" checked>outdoor</input>
+		</label>
 
-	<a href="#"><img src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+		<form action="https://www.freecatphotoapp.com/submit-cat-photo">
+			<label for="rude"><input id="rude" type="checkbox" name="personality"> rude</label>
+			<label for="anxious">
+			<input id="anxious" type="checkbox" name="personality"> anxious
+			</label>
+			<label for="emotional"><input id="emotional" type="checkbox" name="personality"> emotional</label><br>
+		</form>
+	</main>
+	<footer>Luís Amorim</footer>
+</body>
 
-	<h2>myPhotoApp</h2>
-
-	<p>
-		Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
-		attack your ankles chase the red dot, hairball run catnip eat the grass
-		sniff.
-	</p>
-
-	<ul>
-		<li>milk</li>
-		<li>cheese</li>
-		<li>mause</li>
-	</ul>
-	<form action="https://github.com/lamorim42/">
-		<input type="text" placeholder="isso vai direto para o github" required>
-		<button type="submit">this button submits the form</button>
-	</form>
-	<label for="indoor-outdoor">
-		<input id="indoor" type="radio" name="indoor-outdoor">Indoor</input>
-		<input id="outdoor" type="radio" name="indoor-outdoor">outdoor</input>
-	</label>
-</main>
-<footer>Luís Amorim</footer>
+</html>
