--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<main>
 		<div class="utils">
 			<p class="cat">Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
-			<a href="#"><img class="myImage someImgConf" src="./imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+			<a href="#"><img class="myImage someImgConf" src="./public/imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
 			<h2>myPhotoApp</h2>
 			<p>
 				Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
