feat: update layout

--- a/index.html
+++ b/index.html
@@ -5,53 +5,33 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>server</title>
-	<link rel="shortcut icon" href="#">
-	<link rel="stylesheet" href="public/css/style.css" type="text/css">
+	<link rel="shortcut icon" href="#"> <link rel="stylesheet" href="public/css/style.css" type="text/css">
 </head>
 <body>
 	<header class="header">
-		<a href="/">Logo</a>
+		<a href="/">lamorim</a>
 		<nav>
 			<ul class="menu">
-				<li><a class="itemMenu" href="/"></a>Sobre</li>
-				<li><a class="itemMenu" href="/"></a>Projetos</li>
-				<li><a class="itemMenu" href="/"></a>Contato</li>
+				<li><a class="itemMenu" href="/">Projetos</a></li>
+				<li><a class="itemMenu" href="https://github.com/lamorim42" target="_blanck">github</a></li>
+				<li><a class="itemMenu" href="/">Contato</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<div class="utils">
-			<p class="cat">Cat files <a href="https://www.freecatphotoapp.com">freeCodeCamp</a></p>
-			<a href="#"><img class="myImage someImgConf" src="./public/imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
-			<h2>myPhotoApp</h2>
-			<p>
-				Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
-				attack your ankles chase the red dot, hairball run catnip eat the grass
-				sniff.
-			</p>
-			<ul>
-				<li>milk</li>
-				<li>cheese</li>
-				<li>mause</li>
-			</ul>
-		</div>
-
-		<form action="https://github.com/lamorim42/">
-			<input type="text" placeholder="isso vai direto para o github" required>
-			<button type="submit">this button submits the form</button>
-		</form>
-		<label for="indoor-outdoor">
-			<input id="indoor" value="indoor" type="radio" name="indoor-outdoor">Indoor</input>
-			<input id="outdoor" value="outdoor" type="radio" name="indoor-outdoor" checked>outdoor</input>
-		</label>
-
-		<form action="https://www.freecatphotoapp.com/submit-cat-photo">
-			<label for="rude"><input id="rude" type="checkbox" name="personality"> rude</label>
-			<label for="anxious">
-			<input id="anxious" type="checkbox" name="personality"> anxious
-			</label>
-			<label for="emotional"><input id="emotional" type="checkbox" name="personality"> emotional</label><br>
-		</form>
+		<section class="perfil">
+			<div class="perfil-img">
+				<a href="#"><img class="myImage someImgConf" src="./public/imgs/img_basecamp.jpeg" alt="me in sampa Crew team"></img></a>
+			</div>
+			<div class="perfil-text">
+				<h2>myPhotoApp</h2>
+				<p>
+					Kitty ipsum dolor sit amet, shed everywhere shed everywhere stretching
+					attack your ankles chase the red dot, hairball run catnip eat the grass
+					sniff.
+				</p>
+			</div>
+		</section>
 	</main>
 	<footer>Luís Amorim</footer>
 </body>
